force-app/main/default/objects/Trip__c/fields/CalculateMilage__c.field-meta.xml
<CustomField>
    <fullName>CalculateMilage__c</fullName>
    <formula>JourneyEnded__c  -  JourneyStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalculateMilage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>