force-app/main/default/objects/Trip__c/fields/JourneyEnded__c.field-meta.xml
<CustomField>
    <fullName>JourneyEnded__c</fullName>
    <label>JourneyEnded</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>