force-app/main/default/objects/Trip__c/fields/JourneyStart__c.field-meta.xml
<CustomField>
    <fullName>JourneyStart__c</fullName>
    <label>JourneyStart</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>