force-app/main/default/objects/Trip__c/fields/TripName__c.field-meta.xml
<CustomField>
    <fullName>TripName__c</fullName>
    <displayFormat>l-{0000}</displayFormat>
    <label>TripName</label>
    <type>AutoNumber</type>
</CustomField>